welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: value int
  int T = nums
  ^noTriples:3: error: not found: value T
  for (i <- 0 to T){
                 ^noTriples:4: error: not found: value int
    int u = nums(i);
    ^noTriples:5: error: not found: value u
    if (nums(i+1)==u && nums(i+2)==u){
                   ^noTriples:5: error: not found: value u
    if (nums(i+1)==u && nums(i+2)==u){
                                   ^