welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  int T = nums
  for (i <- 0 to T){
    int u = nums(i);
    if (nums(i+1)==u && nums(i+2)==u){
      return false
    }
    // pas de triplet, on retourne true
  	return true
  }
}
       
       
  
  